# fastapi-grpc

./: .pre-commit-config.yaml  README.md
server/: grpc_client.py  grpc_server.py  product_pb2.py  product_pb2_grpc.py  pyproject.toml
server/protos/: product.proto
